[tool.poetry]
name = "pocket-api"
version = "0.1.0"
description = ""
authors = ["kenji imai <imakenfever@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.2"
pocket = "^0.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
